test/error/iface/err7.rzy
component
  Sub
    output
      funcA();
      funcB();
      
    implementation elementary
  end

  Err7
    output
      funcA();
      funcB();
      
  implementation composition
    
    component
      a : Sub;
      b : Sub;

    connection
      a.funcA -> funcA;
      a.funcB -> funcB;
      
  end

